design bulk update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,8 @@
         <td>
             <div>
                 <table class=" nav nav-tabs nav-justified nav-divider">
-                    <tr>                            
+                    <tr>      
+            <td class="col-md-3"><a routerLink="7ColumnDesign">7ColumnDesign</a></td>                      
             <td class="col-md-3"><a routerLink="ReactiveFormValidation">Reactive Form Validation</a></td>
             <td class="col-md-3"><a routerLink="ReactiveForms">Reactive Forms</a></td>
             <td class="col-md-3"><a routerLink="KendoGridReactiveForms">Kendo Grid Reactive Forms</a></td>
