after and before

--- a/src/app/inlline-editing/inlline-editing.component.html
+++ b/src/app/inlline-editing/inlline-editing.component.html
@@ -6,7 +6,7 @@ id="productsGrid"
 (groupChange)="groupChange($event)"
 [data]="view"
 height="500"
-(add)="addHandler($event)"
+(add)="addHandler()"
 >
 <ng-template kendoGridToolbarTemplate>
     <button kendoGridAddCommand>Add new</button>
